--- a/src/styles/config/_dark-mode.scss
+++ b/src/styles/config/_dark-mode.scss
@@ -1,7 +1,7 @@
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
-@include spruce.generate-color-variables(
-  spruce.$dark-colors,
+@include generate-color-variables(
+  $dark-colors,
   ':root[data-theme-mode="dark"]'
 );
 
@@ -9,9 +9,9 @@
   color-scheme: dark;
 
   select.form-control:not([multiple]):not([size]) {
-    @include spruce.field-icon(
-      spruce.$select-icon,
-      spruce.color(select-foreground, form, true, spruce.$dark-colors)
+    @include field-icon(
+      config('select', $form-icon, false),
+      color(select-foreground, form, true, $dark-colors),
     );
   }
 
@@ -20,14 +20,14 @@
 
     &:hover {
       .post-navigation-item__icon {
-        background-color: hsl(207 23% 26%);
-        color: hsl(0 0% 100%);
+        background-color: hsl(207deg 23% 26%);
+        color: hsl(0deg 0% 100%);
       }
     }
 
     &__icon {
-      background-color: hsl(207 39% 17%);
-      color: hsl(0 0% 100%);
+      background-color: hsl(207deg 39% 17%);
+      color: hsl(0deg 0% 100%);
     }
   }
 }
