--- a/src/styles/components/_accordion-list.scss
+++ b/src/styles/components/_accordion-list.scss
@@ -1,5 +1,5 @@
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .accordion-list {
-  @include spruce.layout-stack(m);
+  @include layout-stack(m);
 }
