--- a/src/styles/components/_doc-cards.scss
+++ b/src/styles/components/_doc-cards.scss
@@ -1,9 +1,9 @@
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .doc-cards {
-  margin-block-end: clamp(spruce.spacer(xl), 8vw, 7rem);
+  margin-block-end: clamp(spacer(xl), 8vw, 7rem);
 
   &__inner {
-    @include spruce.layout-grid(spruce.spacer(l), 20rem);
+    @include layout-grid(spacer(l), 20rem);
   }
 }
