--- a/src/styles/components/_heading.scss
+++ b/src/styles/components/_heading.scss
@@ -1,10 +1,10 @@
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .heading {
   $this: &;
 
-  @include spruce.layout-stack(spruce.spacer(xs));
-  margin-block-end: spruce.spacer(l);
+  @include layout-stack(spacer(xs));
+  margin-block-end: spacer(l);
 
   &--center {
     text-align: center;
@@ -15,12 +15,12 @@
   }
 
   &__title {
-    font-size: spruce.responsive-font-size(3rem, 30);
+    font-size: responsive-font-size(3rem, 30);
   }
 
   &__description {
-    font-size: spruce.responsive-font-size(1.25rem, 20, '0.5rem + 1vw');
-    line-height: spruce.$line-height-md;
+    font-size: responsive-font-size(1.25rem, 20, '0.5rem + 1vw');
+    line-height: config('line-height-md', $typography);
     max-width: 50ch;
   }
 }
