--- a/src/styles/components/_hero.scss
+++ b/src/styles/components/_hero.scss
@@ -1,11 +1,11 @@
 @use 'sass:color';
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .hero-wrapper {
   background: linear-gradient(
     0deg,
-    spruce.color(gradient-start, hero) 0%,
-    spruce.color(gradient-end, hero) 100%
+    color(gradient-start, hero) 0%,
+    color(gradient-end, hero) 100%
   );
 }
 
@@ -14,10 +14,10 @@
     align-items: center;
     display: grid;
     grid-template-columns: minmax(0, 1fr);
-    gap: spruce.spacer-clamp(l, xl);
-    padding-block: spruce.get-css-variable(--section-gap-half) spruce.get-css-variable(--section-gap);
+    gap: spacer-clamp(l, xl);
+    padding-block: get-css-variable(--section-gap-half) get-css-variable(--section-gap);
 
-    @include spruce.breakpoint(md) {
+    @include breakpoint(md) {
       grid-template-columns: minmax(0, 1fr) minmax(0, 1.2fr);
       padding-block-start: 0;
     }
@@ -30,7 +30,7 @@
     max-width: 13.5rem;
     order: -1;
 
-    @include spruce.breakpoint(md) {
+    @include breakpoint(md) {
       max-width: 100%;
       order: 2;
     }
@@ -39,16 +39,16 @@
   &__caption {
     text-align: center;
 
-    @include spruce.breakpoint(md) {
-      padding-block: spruce.get-css-variable(--section-gap-half);
+    @include breakpoint(md) {
+      padding-block: get-css-variable(--section-gap-half);
       text-align: start;
     }
   }
 
   &__note {
-    background-color: spruce.color(note-background, hero);
-    border-radius: spruce.$border-radius-sm;
-    color: spruce.color(note-color, hero);
+    background-color: color(note-background, hero);
+    border-radius: config('border-radius-sm', $display);
+    color: color(note-color, hero);
     display: inline-flex;
     font-size: 1rem;
     margin-block-end: 1.5rem;
@@ -57,7 +57,7 @@
   }
 
   &__title {
-    font-size: spruce.responsive-font-size(4.5rem, 35, '4vw + 1rem');
+    font-size: responsive-font-size(4.5rem, 35, '4vw + 1rem');
     letter-spacing: -3px;
     margin-block: 0;
     max-width: 50ch;
@@ -69,7 +69,7 @@
   }
 
   &__description {
-    font-size: spruce.responsive-font-size(1.35rem, 30, '1vw + 1rem');
+    font-size: responsive-font-size(1.35rem, 30, '1vw + 1rem');
     margin-block: 1.25rem 0;
     max-width: 60ch;
   }
@@ -78,11 +78,11 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    gap: spruce.spacer(m);
+    gap: spacer(m);
     justify-content: center;
     margin-top: 2.15rem;
 
-    @include spruce.breakpoint(md) {
+    @include breakpoint(md) {
       justify-content: start;
     }
   }
