--- a/src/styles/components/_page-heading.scss
+++ b/src/styles/components/_page-heading.scss
@@ -1,22 +1,22 @@
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .page-heading {
   align-items: center;
   display: grid;
-  gap: spruce.spacer(s);
+  gap: spacer(s);
   grid-template-columns: minmax(0, 1fr);
   justify-content: center;
-  padding-block: clamp(spruce.spacer(xxl), 10vw, 6rem) clamp(spruce.spacer(xxl), 10vw, 8rem);
+  padding-block: clamp(spacer(xxl), 10vw, 6rem) clamp(spacer(xxl), 10vw, 8rem);
   text-align: center;
 
-  @include spruce.breakpoint(md) {
+  @include breakpoint(md) {
     grid-template-columns: minmax(0, 1fr) minmax(0, 1.5fr);
     justify-content: flex-start;
     text-align: start;
   }
 
   &__title {
-    font-size: spruce.responsive-font-size(
+    font-size: responsive-font-size(
       $size: 4rem,
       $scaler: 40,
       $optimal-size: '4vw + 1rem'
@@ -32,18 +32,18 @@
     display: flex;
     flex-direction: column;
 
-    @include spruce.breakpoint(md) {
+    @include breakpoint(md) {
       align-items: flex-start;
     }
   }
 
   &__description {
-    font-size: spruce.responsive-font-size(
+    font-size: responsive-font-size(
       $size: 1.25rem,
       $scaler: 30,
       $optimal-size: '1vw + 1rem'
     );
-    margin: spruce.spacer(m) 0 0;
+    margin: spacer(m) 0 0;
     margin-block: 0;
     max-width: 50ch;
   }
@@ -52,7 +52,7 @@
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    gap: spruce.spacer(s);
-    margin-block-start: spruce.spacer(xs);
+    gap: spacer(s);
+    margin-block-start: spacer(xs);
   }
 }
