--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -1,18 +1,18 @@
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 @use '../mixins' as *;
 
 .sidebar {
-  @include spruce.layout-stack(spruce.spacer(l));
-  @include spruce.scrollbar(
-    spruce.color(thumb-background, scrollbar),
-    spruce.color(thumb-background-hover, scrollbar),
-    spruce.color(track-background, scrollbar),
+  @include layout-stack(spacer(l));
+  @include scrollbar(
+    color(thumb-background, scrollbar),
+    color(thumb-background-hover, scrollbar),
+    color(track-background, scrollbar),
     0.5rem,
     0.15rem
   );
   inset-block-start: 2rem;
   overflow-y: auto;
-  padding-inline-end: spruce.spacer(m);
+  padding-inline-end: spacer(m);
 }
 
 .sidebar-section {
@@ -21,17 +21,17 @@
   }
 
   &__navigation {
-    border-inline-start: 1px solid spruce.color(border);
+    border-inline-start: 1px solid color(border);
     font-size: 1rem;
     margin-block-start: 1rem;
     padding-inline-start: 1rem;
 
     ul {
-      @include spruce.clear-list;
+      @include clear-list;
     }
 
     a {
-      color: spruce.color(text);
+      color: color(text);
       text-decoration: none;
 
       &[aria-current='page'] {
