--- a/src/styles/components/_theme-switcher.scss
+++ b/src/styles/components/_theme-switcher.scss
@@ -1,5 +1,5 @@
 @use '../config/dark-colors' as dark;
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .theme-switcher {
   display: inline-flex;
@@ -7,7 +7,7 @@
 
   &__icon {
     align-items: center;
-    color: spruce.color(text, $only-color: true, $map: dark.$colors);
+    color: color(text, $only-color: true, $map: dark.$colors);
     display: flex;
     inset: 0 auto 0 0;
     justify-content: center;
@@ -29,28 +29,28 @@
   }
 
   &__select {
-    background-color: spruce.color(background, footer);
-    border-color: spruce.color(border, $only-color: true, $map: dark.$colors);
-    color: spruce.color(text, $only-color: true, $map: dark.$colors);
+    background-color: color(background, footer);
+    border-color: color(border, $only-color: true, $map: dark.$colors);
+    color: color(text, $only-color: true, $map: dark.$colors);
     font-size: 0.9375rem;
     padding-inline-start: 2rem;
 
     &:focus {
-      @include spruce.focus-ring(
-        $type: spruce.$form-control-focus-ring-type,
-        $border-color: spruce.color(border-focus, form, true, dark.$colors),
-        $ring-color: spruce.color(ring-focus, form, true, dark.$colors),
-        $box-shadow-type: spruce.$form-control-focus-ring-box-shadow-type,
-        $ring-width: spruce.$form-control-focus-ring-width,
-        $ring-offset: spruce.$form-control-focus-ring-offset
+      @include focus-ring(
+        $type: config('focus-ring-type', $form-control),
+        $border-color: color(border-focus, form, true, dark.$colors),
+        $ring-color: color(ring-focus, form, true, dark.$colors),
+        $box-shadow-type: config('focus-ring-box-shadow-type', $form-control),
+        $ring-width: config('focus-ring-width', $form-control),
+        $ring-offset: config('focus-ring-offset', $form-control),
       );
     }
   }
 
   select.form-control:not([multiple]):not([size]) {
-    @include spruce.field-icon(
-      spruce.$select-icon,
-      spruce.color(select-foreground, form, true, dark.$colors)
+    @include field-icon(
+      config('select', $form-icon, false),
+      color(select-foreground, form, true, dark.$colors)
     );
   }
 }
