--- a/src/styles/layouts/_blog.scss
+++ b/src/styles/layouts/_blog.scss
@@ -1,16 +1,16 @@
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .l-blog {
-  padding-block: 0 clamp(spruce.spacer(xl), 8vw, 7rem);
+  padding-block: 0 clamp(spacer(xl), 8vw, 7rem);
 
   &__inner {
     --columns: 1;
 
     display: grid;
-    gap: spruce.spacer(l);
+    gap: spacer(l);
     grid-template-columns: repeat(var(--columns), minmax(0, 2fr));
 
-    @include spruce.breakpoint(sm) { --columns: 2; }
-    @include spruce.breakpoint(lg) { --columns: 3; }
+    @include breakpoint(sm) { --columns: 2; }
+    @include breakpoint(lg) { --columns: 3; }
   }
 }
