--- a/src/styles/layouts/_documentation.scss
+++ b/src/styles/layouts/_documentation.scss
@@ -1,20 +1,20 @@
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .l-documentation {
-  padding-block: spruce.spacer-clamp(m, l) spruce.spacer-clamp(l, xl);
+  padding-block: spacer-clamp(m, l) spacer-clamp(l, xl);
 
   &__inner {
     display: grid;
-    gap: spruce.spacer(xl);
+    gap: spacer(xl);
     grid-template-columns: minmax(0, 1fr);
 
-    @include spruce.breakpoint(sm) {
+    @include breakpoint(sm) {
       grid-template-columns: minmax(0, 15rem) minmax(0, 1fr);
     }
   }
 
   &__sidebar {
-    @include spruce.breakpoint(sm) {
+    @include breakpoint(sm) {
       max-height: calc(100vh - 4rem);
       position: sticky;
     }
@@ -23,19 +23,19 @@
   &__body-helper {
     order: -1;
 
-    @include spruce.breakpoint(sm) {
+    @include breakpoint(sm) {
       order: 2;
     }
   }
 
   &__body {
-    column-gap: spruce.spacer(xl);
+    column-gap: spacer(xl);
     display: grid;
     grid-auto-rows: min-content;
     grid-template-columns: minmax(0, 1fr);
-    row-gap: spruce.spacer(m);
+    row-gap: spacer(m);
 
-    @include spruce.breakpoint(lg) {
+    @include breakpoint(lg) {
       grid-template-columns: minmax(0, 1fr) minmax(0, 15rem);
     }
   }
@@ -45,7 +45,7 @@
     max-width: 45rem;
 
     &-helper {
-      @include spruce.breakpoint(lg) {
+      @include breakpoint(lg) {
         grid-column: 2 / 3;
         order: 2;
       }
@@ -53,7 +53,7 @@
   }
 
   &__content {
-    @include spruce.breakpoint(lg) {
+    @include breakpoint(lg) {
       grid-column: 1 / 2;
     }
 
@@ -64,17 +64,17 @@
   }
 
   &__title {
-    font-size: spruce.responsive-font-size(3.3rem, 40, '3vw + 1rem');
+    font-size: responsive-font-size(3.3rem, 40, '3vw + 1rem');
     margin-block: 0;
     margin-inline: auto;
     max-width: 45rem;
 
-    @include spruce.breakpoint(lg) {
+    @include breakpoint(lg) {
       grid-column: 1 / 2;
     }
   }
 
   &__code-tab {
-    margin-block-end: spruce.spacer-clamp(l, xl);
+    margin-block-end: spacer-clamp(l, xl);
   }
 }
