--- a/src/styles/layouts/_error-404.scss
+++ b/src/styles/layouts/_error-404.scss
@@ -1,9 +1,9 @@
 @use 'sass:color';
-@use '~sprucecss/scss/spruce';
+@use '~sprucecss/scss/spruce' as *;
 
 .l-error-404 {
   &__inner {
-    padding: clamp(spruce.spacer(xxl), 6vw, spruce.spacer(xxxl)) 0;
+    padding: clamp(spacer(xxl), 6vw, spacer(xxxl)) 0;
     text-align: center;
   }
 
@@ -13,31 +13,31 @@
   }
 
   &__caption {
-    @include spruce.layout-stack(spruce.spacer(s), false);
-    margin-block-start: spruce.spacer(m);
+    @include layout-stack(spacer(s), false);
+    margin-block-start: spacer(m);
     margin-inline: auto;
     max-width: 45rem;
   }
 
   &__title {
-    font-size: spruce.responsive-font-size(3.5rem, 30);
+    font-size: responsive-font-size(3.5rem, 30);
   }
 
   &__description {
-    font-size: spruce.responsive-font-size(
+    font-size: responsive-font-size(
       $size: 1.35rem,
       $scaler: 30,
       $optimal-size: '1vw + 1rem'
     );
-    margin-block: spruce.spacer(s) 0;
+    margin-block: spacer(s) 0;
   }
 
   &__btns {
     align-items: center;
     display: flex;
     flex-wrap: wrap;
-    gap: spruce.spacer(m);
+    gap: spacer(m);
     justify-content: center;
-    margin-block-start: spruce.spacer(m);
+    margin-block-start: spacer(m);
   }
 }
